@@ -1,7 +1,8 @@
 2019-09-27 Philipp Klaus Krause <pkk AT spth.de>
 
-	* src/pdk/gen.c:
-	  Improve Pseudoregister handling.
+	* src/pdk/gen.c,
+	  src/pdk/ralloc2.cc:
+	  Improve register allocation.
 
 2019-09-26 Philipp Klaus Krause <pkk AT spth.de>
 
